--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,130 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+/* =======================
+      Colors
+==========================*/
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --White: #FFFFFF	;
+  --NavyBlue: rgb(9 33 67)	;
+  --black: #000000;
+  --blue-button: #1976d2;
+  --red-button: #e41d43;
+  --icons: #40464d;
+  --footer-bg: #212529;
+  --white: #fff;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--White);
+  color: var(--black);
+  direction: rtl;
+  overflow-x: hidden;
+}
+/* =======================
+       My classes
+==========================*/
+
+.border {
+  border: 4px solid red;
+}
+.flex {
+  display: flex;
+  align-items: center;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+/* =================
+    General Style
+====================*/
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@400&display=swap');
+
+
+html {
+  font-family: system-ui, "-apple-system", "Roboto", sans-serif;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+ 
+*{ 
+    font-family: "Almarai"; 
+    font-weight: 400; 
+    font-style:normal; 
+} 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+::-webkit-scrollbar {
+  width: 0.88rem;
+}
+
+::-webkit-scrollbar-track {
+  border: 7px solid #292c3b;
+  box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  background-color: #d4d4d8;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #999;
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+html {
+  scrollbar-color: #9e4673 #3d4a59;
+}
+
+.container{
+  width: 80%;
+  margin-inline: auto;
+}
+
+@media (width <600px) {
+  .container {
+    width: 100%;
   }
 }
+
+/* =======================
+       HTML elements
+==========================*/
+a,
+button {
+  all: unset;
+  display: inline-block;
+  transition: 0.2s;
+}
+
+button:active,
+a:active {
+  scale: 0.9;
+}
+
+button:hover,
+a:hover {
+  cursor: pointer;
+}
+
+button:disabled{
+  opacity: 0.7;
+  cursor: not-allowed;
+  scale: 1;
+}
+
+li {
+  list-style: none;
+}
+
+/* =======================================
+    General Style for this project
+==========================================*/
+
