--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     gap: 4rem;
-
 margin: auto;
 }
 .img-text-hero{
@@ -23,6 +22,7 @@ margin: auto;
 }
 .img-text-hero img{
   padding: 20px;
+  width: 100%  !important;
 }
 .img-text-hero .text{
   display: flex;
