--- a/src/app/our-services/style.css
+++ b/src/app/our-services/style.css
@@ -2,21 +2,22 @@ section.sec-serv {
   width: 100%;
 }
 .backServices{
-  background-image:url(../../../public/image/pexels-tima-miroshnichenko-6195288.jpg) ;
-  background-position: bottom;
+  /* background-image:url(../../../public/image/cleaning-service-flat-design-illustration-people-vacuum-wipe-dust-sweeping-floor-house-background-banner-poster_2175-2080.jpg.avif); */
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  height: 50rem !important; 
+  /* height: 50rem !important;  */
   margin: auto;
   text-align: right;
   justify-content: center;
   align-items: right;
   background-attachment: fixed;
   padding: 20px;
+  background: #313131;
 }
 .backServices  h3{
   font-size: 3rem;
@@ -31,4 +32,7 @@ section.sec-serv {
 section.sec-serv .class-bg{
   margin: auto !important;
   padding: 30px !important;
+}
+.imga{
+  border-radius: 20px !important;
 }
