--- a/src/app/contact/contact.css
+++ b/src/app/contact/contact.css
@@ -251,11 +251,14 @@
 }
 /* twitter*/
 .card a:nth-child(2):hover {
-  background-color: #00acee;
+  background-color: #000000;
 }
 /* linkdin*/
 .card a:nth-child(3):hover {
-  background-color: #0072b1;
+  background-color: #fbff00e3;
+  color: #000000 !important;
+  opacity: 1;
+  z-index: 1000;
 }
 /* Whatsapp*/
 .card a:nth-child(4):hover {
