--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,7 +124,9 @@ button:disabled{
 li {
   list-style: none;
 }
-
+.card a{
+  font-size: x-large;
+}
 /* =======================================
     General Style for this project
 ==========================================*/
