--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -170,6 +170,7 @@ section .l1-class-bg{
 }
 .line-3-bg img{
   width: 100%;
+  border-radius: 5%;
 }
 .line-3-bg button{
 
@@ -196,6 +197,7 @@ section .l1-class-bg{
   color:var(--black);
   font-size: xx-small;
   font-weight: bolder;
+  font-size: x-large;
   
 
 }
@@ -203,6 +205,8 @@ section .l1-class-bg{
   width: 70%;
   line-height: 50px;
   color:var(--black);
+  font-size: large;
+
 }
 .line-5-bg img{
   width: 100%;
@@ -246,6 +250,9 @@ section .l1-class-bg{
 }
 .l1-class-bg {
   height: auto !important;
+}
+.imga{
+  border-radius: 20px;
 }
 @media (max-width : 968px) {
   .class-bg .flex {
