--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,5 +1,5 @@
 main{
-  background-image:url(../../../public/image/0812202414323066ba1cfe446f7.jpeg) ;
+  background-image:url(../../../public/image/hand-drawn-cleaning-service-template-design_23-2150884878.jpg);
   width: 100%;
   height: 60rem;
   position: relative;
