--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -285,4 +285,11 @@ section .l1-class-bg{
   .box{
     width: 80%;
   }
+  .line-5-bg p{
+    width: 100%;
+    line-height: 50px;
+    color:var(--black);
+    font-size: large;
+  
+  }
 }
