--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,10 +1,10 @@
 main{
-  background-image:url(../../../public/image/0812202414323066ba1cfe446f7.jpeg);
+  background-image:url(../../../public/image/bac.jpeg);
   width: 100%;
   height: 60rem;
   position: relative;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position:right;
   background-attachment: fixed;
   object-fit: cover;
@@ -80,9 +80,11 @@ main h1,main p{
     width: 100%;
     height: 100%;
     color: var(--White);
-    gap: 2rem;
+    gap: 1rem;
     line-height: 30px;
-    padding-block: 400px;
+    /* padding-block: 380px; */
+    /* margin-block: 100px; */
+
 }
 }
 
@@ -95,6 +97,6 @@ main h1,main p{
     gap: 2rem;
     padding-inline: 20px;
     align-items: flex-start;
-    width: 60%;
+    width: 90%;
   }
 }
