--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,12 +1,10 @@
-footer{
-  /* bottom: -50px; */
-  position: relative;
-
+footer {
   margin-bottom: 50px;
-
-    /* margin-top: 100px; */
-
+  bottom: 0px !important;
+  position: relative;
+  margin-bottom: 50px;
 }
+
 .footer-class {
   display: flex;
   width: 100%;
@@ -34,5 +32,4 @@ footer{
   .footer-class {
     flex-direction: column;
   }
-
 }
