--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -8,6 +8,7 @@ main{
   background-position:right;
   background-attachment: fixed;
   object-fit: cover;
+  /* transform: translateY(-15rem); */
 }
 main .flex{
   flex-direction: column;
@@ -82,7 +83,6 @@ main h1,main p{
     color: var(--White);
     gap: 1rem;
     line-height: 30px;
-    /* padding-block: 380px; */
     /* margin-block: 100px; */
 
 }
@@ -98,5 +98,32 @@ main h1,main p{
     padding-inline: 20px;
     align-items: flex-start;
     width: 90%;
+    
+    /* padding-block: 380px; */
+
   }
+  main{
+    background-image:url(../../../public/image/bac.jpeg);
+    width: 100%;
+    height: 60rem;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position:right;
+    background-attachment: fixed;
+    object-fit: cover;
+    transform: translateY(-15rem);
+  }
+  .llll{
+    transform: translateY(-70px);
+
+  }
+  .ll{
+    margin-block: -60px;
+  }
+  main .main-but {
+    display: flex;
+    gap: 2rem;
+    margin-top: 20px;
+    padding-inline: 20px;}
 }
