--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,8 +1,8 @@
 footer {
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
   bottom: 0px !important;
   position: relative;
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
 }
 
 .footer-class {
@@ -12,7 +12,7 @@ footer {
   justify-content: center;
   align-items: center;
   text-align: center;
-  position: absolute;
+  position: static;
   bottom: 0px !important;
   background-color: var(--NavyBlue);
   height: 5rem;
